# object-detection

./: README.md  make.sh  post_IS_testvisualize.py  preparedata.py  test_IStarget_visualizer.py  test_targetgenerator.py  test_visualizer.py  train_net.py
config/: Base_selection.yaml  __init__.py  selection_config.py  selection_gpu.yaml
selection/: __init__.py  datamapper.py  drill.py  headscreator.py  lossmaker.py  make.sh  maskcreate.py  selecpostprocess.py  selection.cpp  selection.py  selection_cuda.cu  setup.py  targetgenerator.py  test1.py
selection/backbone/: __init__.py  build.py  lvbb.py  maskhed.py  selec_IS.py  selecbackbonewrap.py
selection/cputest/: CMakeLists.txt  make.sh  selection_cpu.cpp  setup.py  test1.py
selection/gputest/: make.sh  selection_cuda1.cu  selection_cuda2.cu  selection_cuda3.cu  selection_cuda4.cu  selection_gpu_test1.cpp  selection_gpu_test2.cpp  selection_gpu_test3.cpp  selection_gpu_test4.cpp  setup.py  test1.py
selection/tools/: __init__.py  selecvisualizer.py
selection/util/: __init__.py  array_trans.py  boxes.py  cloudtobox.cpp  cloudtobox_cuda.cu  clustering.py  coco.py  contour.pyx  iou.py  make.sh  post_IS_process.py  predata_process.py  pyramid.cpp  pyramid_cuda.cu  setup.py
